.feat : statistics => change uri for statistics adherent
